# InformSystem4Course

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: blank.yml  deploy-artifact.yml
ConsoleInterface/: CMakeLists.txt
ConsoleInterface/include/: ConsoleInterface.h
ConsoleInterface/src/: ConsoleInterface.cpp
Gui/: CMakeLists.txt
Gui/include/: mainwindow.h
Gui/src/: mainwindow.cpp
Gui/ui/: mainwindow.ui
Lab2Core/: CMakeLists.txt
Lab2Core/include/: Lab2Core.h
Lab2Core/src/: Lab2Core.cpp
Lab3Core/: CMakeLists.txt
Lab3Core/include/: Lab3Core.h  Parameters.h  ResultData.h
Lab3Core/src/: Lab3Core.cpp
Lab5Core/: CMakeLists.txt
Lab5Core/include/: Lab5Core.h
Lab5Core/src/: Lab5Core.cpp
MathModel/: CMakeLists.txt
MathModel/include/: MathModel.h
MathModel/src/: MathModel.cpp
src/: dataTest  dataTest3  main  task3.cpp
